# dotfiles

./: .bootstrap.sh.swp  .gitignore  aliases  bash_profile  bashrc  bootstrap.sh  cht.sh  clean_text.py  editorconfig  fnmode.py  ideavimrc  lunar_calendar.py  mpvfire  p10k.zsh  pip.packages  plasma_keybindings.kksrc  qrdisplay  readfire  shell_prompt.sh  sudofy_hid_apple  time_math.sh  tmux-sessionizer  tmux.conf  wezterm.lua  ydlfire  zshrc
config/: starship.toml
config/alacritty/: alacritty.yml
config/keyd/: default.conf
config/kitty/: AutomatedThemeSwitcher.plist  i_theme-switcher.sh  initiate_autoswitcher.sh  kitty.conf  kitty.conf.bak  scrollback.vim  theme-switcher.sh  window_navigation.py
config/nvim/: coc-settings.json  init.lua  init.vim  nvim
config/nvim/after/plugin/: LanguageTool.lua  colors.lua  copilot.lua  dap.lua  dasht.lua  floating-term.lua  fold.lua  git-blamer.lua  glance.lua  grammarous.lua  harpoon.lua  lsp.lua  oil.lua  telescope-docsets.lua  telescope.lua  toggleterm.lua  treesitter.lua  vim-cmake.lua  vim-slime.lua  vimtex.lua  virtuality.lua
config/nvim/lua/bla/: init.lua  language_setups.lua  lsp.lua  old_maps.lua  packer.lua  remap.lua
config/nvim/lua/config/: config.lua  init.lua  lazy.lua  my_plugins.lua  old_maps.lua  plugin_lib.lua  remap.lua
config/nvim/lua/old_unused_plugins/: auto-session.lua  folke_noice.lua
config/nvim/plugin/: packer_compiled.lua
config/nvim/templates/: CMakeLists.txt
fzf/: key-bindings.zsh
nvim/: init.lua
nvim/after/plugin/: lsp.lua  treesitter.lua
vim/: vimrc
(+52 files in other folders)
